force-app/main/default/objects/LAD_Return_Item__c/LAD_Return_Item__c.object-meta.xml
<CustomObject>
    <description>This Object stores all the Return Items info when an order is returned</description>
    <label>Return Item</label>
    <nameField>
        <displayFormat>RI-{0000000}</displayFormat>
        <label>Return Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>