force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>LAD_Additional_Comments__c</fullName>
    <description>FOUK-9257: To provide additional comments for the selected return items</description>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>