force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_CreditNote__c.field-meta.xml
<CustomField>
    <fullName>LAD_CreditNote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field to Financial document object</description>
    <label>Credit Note</label>
    <referenceTo>LAD_Financial_Document__c</referenceTo>
    <relationshipLabel>Return Items</relationshipLabel>
    <relationshipName>Return_Items</relationshipName>
    <type>Lookup</type>
</CustomField>