force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_Original_Order_Summary_Product__c.field-meta.xml
<CustomField>
    <fullName>LAD_Original_Order_Summary_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the original order product summary</description>
    <label>Original Order Summary Product</label>
    <referenceTo>OrderItemSummary</referenceTo>
    <relationshipLabel>Return Items</relationshipLabel>
    <relationshipName>Return_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>