force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>LAD_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Fields is used to store Product Name from the Returned Order</description>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Return Items</relationshipLabel>
    <relationshipName>Return_Items</relationshipName>
    <type>Lookup</type>
</CustomField>