force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_Quantity_ordered__c.field-meta.xml
<CustomField>
    <fullName>LAD_Quantity_ordered__c</fullName>
    <description>This Fields is used to store Quantity Ordered of the returned order</description>
    <label>Quantity ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>