force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_Quantity_returned__c.field-meta.xml
<CustomField>
    <fullName>LAD_Quantity_returned__c</fullName>
    <description>This Fields is used to store Quantity Returned of the Returned Order</description>
    <label>Quantity returned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>