force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_Return_address__c.field-meta.xml
<CustomField>
    <fullName>LAD_Return_address__c</fullName>
    <description>This Field is used to store address when an order is returned</description>
    <label>Return address</label>
    <type>Address</type>
</CustomField>