force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_Return_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>LAD_Return_Date_and_Time__c</fullName>
    <description>This Fields is used to store Returned Item Date and Time of the Returned Order</description>
    <label>Return Date and Time</label>
    <type>DateTime</type>
</CustomField>