force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_Return_Method__c.field-meta.xml
<CustomField>
    <fullName>LAD_Return_Method__c</fullName>
    <description>This Fields is used to Choose Returned Method of the Returned Order</description>
    <label>Return Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laddaw Collect</fullName>
            </value>
            <value>
                <fullName>Drop Off at MDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>