force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_Return_Order__c.field-meta.xml
<CustomField>
    <fullName>LAD_Return_Order__c</fullName>
    <description>This is a master-detail to Return Order Object</description>
    <label>Return Order</label>
    <referenceTo>LAD_Return__c</referenceTo>
    <relationshipLabel>Return Items</relationshipLabel>
    <relationshipName>Return_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>