force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>LAD_Return_Reason__c</fullName>
    <description>This Fields is used to Choose Returned Reason of the Returned Order</description>
    <label>Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK01</fullName>
                <label>Broken on Delivery</label>
            </value>
            <value>
                <fullName>UK02</fullName>
                <label>Scratched on Delivery</label>
            </value>
            <value>
                <fullName>UK03</fullName>
                <label>Incorrectly Supplied</label>
            </value>
            <value>
                <fullName>UK04</fullName>
                <label>Not on Delivery</label>
            </value>
            <value>
                <fullName>UK09</fullName>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>UK11</fullName>
                <label>Recall Quality Issue</label>
            </value>
            <value>
                <fullName>UK12</fullName>
                <label>Wholesale DMR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>