force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_ReturnAddress__c.field-meta.xml
<CustomField>
    <fullName>LAD_ReturnAddress__c</fullName>
    <description>To store the address for return item</description>
    <label>Return Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>