force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_ReturnOverrideReason__c.field-meta.xml
<CustomField>
    <fullName>LAD_ReturnOverrideReason__c</fullName>
    <description>FOUK-9897: Reason for overriding return period</description>
    <label>Reason for Return Period Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Goodwill</fullName>
            </value>
            <value>
                <fullName>Shortage Product</fullName>
            </value>
            <value>
                <fullName>Laddaw MDC Issue</fullName>
            </value>
            <value>
                <fullName>Laddaw Hub Team Issue</fullName>
            </value>
            <value>
                <fullName>Management Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>