force-app/main/default/objects/LAD_Return_Item__c/fields/LAD_Sales_Code__c.field-meta.xml
<CustomField>
    <fullName>LAD_Sales_Code__c</fullName>
    <description>This Fields is used to store Sales Code of the Returned Order</description>
    <label>Sales Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>