force-app/main/default/objects/LAD_Return_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAD_Status__c</columns>
    <columns>LAD_Original_Order_Summary_Product__c</columns>
    <columns>LAD_Return_Method__c</columns>
    <columns>LAD_Return_Reason__c</columns>
    <columns>LAD_Return_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>